force-app/main/default/objects/custom_create375__c/custom_create375__c.object-meta.xml
<CustomObject>
    <label>Custom created object375</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects375</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>