force-app/main/default/objects/custom_create375__c/fields/custom_create_375field664__c.field-meta.xml
<CustomField>
    <fullName>custom_create_375field664__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 375field664</label>
    <type>Checkbox</type>
</CustomField>